2003-12-26  Martin Mares  <mj@ucw.cz>

	* Removed CVS $Id$ tags from all files.

	* Makefile: Added some more warnings.

2003-11-29  Martin Mares  <mj@ucw.cz>

	* Imported the pciutils sources to my Arch repository. Good-bye, CVS.

2003-01-04  Martin Mares  <mj@ucw.cz>

	* Released as 2.1.11.

	* Makefile: Changed configuration of installation directories --
	all paths are now set at the top of the Makefile instead of being
	scattered between the installation rules. The default installation
	now goes always to /usr/local regardless of the OS as most distributions
	already contain some version of pciutils and we don't want custom
	installations to interfere with the default ones.

	* Makefile: Removed a couple of ancient install hacks: we no longer
	try to avoid overwriting a newer pci.ids file (users are now expected
	to use update-ids) and we don't try to remove /etc/pci.ids (a long time
	has passed since the last version which used it).

	* Makefile: Paths to pci.ids in man pages automatically get the right path.

	* Added the update-ids utility.

	* lib: Removed partially implemented "syscall" access method which will
	probably never be needed.

2002-12-27  Martin Mares  <mj@ucw.cz>

	* lib/nbsd-libpci.c: Cleaned up and hopefully made it endian safe.

	* lib/generic.c (pci_generic_scan_bus): Added work-around for devices with
	discontiguous numbering of functions. This is already present in the Linux
	kernel for several years, but I forgot to update pciutils as well.

2002-12-26  Martin Mares  <mj@ucw.cz>

	* lib/header.h, lspci.c: Dump AGP3 flags and speeds.

	* lib/pci.h, Makefile: Removed HAVE_OWN_HEADER_H. Always use our own header,
	there is no reason to prefer the kernel version.

	* lib/proc.c (proc_scan): Don't forget to initialize hdrtype.

	* Added preliminary version of NetBSD support by Quentin Garnier
	<netbsd@quatriemek.com>.

2002-04-06  Martin Mares  <mj@ucw.cz>

	* lspci.c: Mention "-xxx" in the help.

2002-03-30  Martin Mares  <mj@ucw.cz>
