@@ -1,7 +1,7 @@
 /*
  *	Linux PCI Library -- Device Filtering
  *
- *	Copyright (c) 1998--2002 Martin Mares <mj@ucw.cz>
+ *	Copyright (c) 1998--2003 Martin Mares <mj@ucw.cz>
  *
  *	Can be freely distributed and used under the terms of the GNU GPL.
  */
@@ -12,7 +12,7 @@
 #include "internal.h"
 
 void
-pci_filter_init(struct pci_access * UNUSED a, struct pci_filter *f)
+pci_filter_init(struct pci_access *a UNUSED, struct pci_filter *f)
 {
   f->bus = f->slot = f->func = -1;
   f->vendor = f->device = -1;
